--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-<table width=100%>
+<body width=100%>
+<table>
+  <tr><th><img src='UserGuide/m.png' width="25%"><img src='UserGuide/graph3.png' width="25%"><img src='UserGuide/graph1.png' width="25%"><img src ='UserGuide/graph2.png' width="25%"></th></tr>
 <tr>
-  <th>
-    <p>Welcome to <b>Paint</b> - a graph drawing tool, which allows you to create colored graphs!</p>
+  <th width=100%>
     <hr>
-    <h3>User's Guide</h3>
+    <h1><p>Welcome to <b>Isomorph</b> - a graph drawing tool, which allows you to create colored graphs!</p></h1>
+    <hr>
+    <h2>User's Guide</h2>
     <img src='UserGuide/GUI.png' width=100%>
     <p> The application consists of two seperate canvas that allow the user to create graphs and test whether these are isomorphic.</p>
-    <h4>Drawing</h4>
+    <h3>Drawing</h3>
     <p>To place a vertex, click on the canvas with right mouse button. By default, the vertex will be colored black.<br>
       If you want to color a vertex, double click it and it will use your current pen color. (By default, the pen is set to blue) <br>
       To place an edge, left click the start vertex, drag the mouse to the end vertex and release the button.
       The edge's color will also depend on your current pen color!
     </p>
-    <h4>Buttons</h4>
+    <h3>Buttons</h3>
     <p>Paint supports many operations on your graph. Each canvas comes with many functions that will help you create your graphs.</p>
     <img src='UserGuide/buttons.png'>
-    <h5>Pen Color</h5>
+    <h4>Pen Color</h4>
     <p>To change pen color, press the <b>Change pen color</b> button.</p>
       <img src='UserGuide/color.png'>
     <p>By doing so, a system dialog will open that will allow you to pick a new color. It contains recently used color a few most commonly used colors, just for your graph!</p>
@@ -27,13 +30,13 @@
     <img src='UserGuide/advancepick.png'>
     <p>We also return the current pen RGB value for user's convenience</p>
     <img src='UserGuide/label.png'>
-    <h5>Pen Width</h5>
+    <h4>Pen Width</h4>
     <p>Moreover, we provide the user with an ability to change pen width by pressing the <b>Change pen width</b> button.</p>
     <img src='UserGuide/width.png'>
     <p>This does not affect the isomorphism testing of the graph! It is only an aesthetic feature.
       By pressing the button, the user will see a combo box that allows them to specify the width of the pen (1-10 pixels).
     </p>
-    <h5>Draw Edge</h5>
+    <h4>Draw Edge</h4>
     <p>For bigger graphs, we recommend using the <b>Draw Edge</b> button, as it allows the user to connect the graph more precisely.
     </p>
     <img src='UserGuide/edge.png'>
@@ -42,7 +45,7 @@
     </p>
     <img src='UserGuide/drawedge.png'>
     <p>After specifing the vertices, the user will see the same dialog box to pick the edge color as when they change the pen color</p>
-    <h5>Open and Save</h5>
+    <h4>Open and Save</h4>
     <p> User can also save and open existing graphs. </p>
     <img src='UserGuide/open.png'>
     <p>To save a graph, the user needs to press the <b>Save</b> button. It will open the system standard dialog for saving files.
@@ -51,15 +54,15 @@
     <p>To open a graph, the user needs to press the <b>Open</b> button. It will open the system standard dialog for opening files.
         The user should select the <b>PNG</b> file to properly load the graph!
     </p>
-    <h5>Clear</h5>
+    <h4>Clear</h4>
     <p>Clear allows the user to clear their canvas by erasing all edges and vertices</p>
     <img src='UserGuide/clear.png'>
-    <h5>Shuffle</h5>
+    <h4>Shuffle</h4>
     <p>Shuffle allows the user to shuffle the vertices around! It leaves all the edges intact, but it changes the labelling of all the vertices randomly.
     </p>
     <img src='UserGuide/shuffle.png'>
-    <h4>Isomorphic Testing</h4>
-    <img src='UserGuide/IsomorphismButtons.png' width=100%>
+    <h3>Isomorphic Testing</h3>
+    <img src='UserGuide/IsomorphismButtons.png' width=50%>
     <p>The user can check whether the two graphs that they drew are isomorphic.
       However, to do so, they first need to specify a runnable file that will perform the testing!
       They need to specify the runnable file that then will perform the check in the background.
@@ -72,13 +75,6 @@
       </tr>
     </table>
   </th>
-    <th>
-      <table width=50%>
-        <tr><th><img src='UserGuide/m.png'></th></tr>
-        <tr><th><img src='UserGuide/graph3.png'></th></tr>
-        <tr><th><img src='UserGuide/graph1.png'></th></tr>
-        <tr><th><img src ='UserGuide/graph2.png'></th></tr>
-      </table>
-    </th>
   </tr>
 </table>
+</body>
